# benchmark

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  run_all.sh  run_single.sh  run_video_all.sh  run_video_single.sh
.cursor/rules/: benchmark_fair_fast.mdc  custom.mdc  image_custom_transforms_architecture.mdc  video_custom_transforms_architecture.mdc
.cursor/skills/: QUICKREF.md  README.md
.cursor/skills/benchmark-results-publisher/: SKILL.md
.cursor/skills/benchmark-runner/: SKILL.md
.cursor/skills/documentation-generator/: SKILL.md
.cursor/skills/gcp-benchmark-triage/: SKILL.md
.cursor/skills/library-integration/: SKILL.md
.cursor/skills/paper-benchmark-execution/: SKILL.md
.cursor/skills/paper-coverage-validator/: SKILL.md
.cursor/skills/performance-analysis/: SKILL.md
.cursor/skills/pre-commit-validation/: SKILL.md
.cursor/skills/transform-spec-validator/: SKILL.md
.github/workflows/: ci.yml
_internal/plans/: augmentation_benchmark_v2.md  paper_benchmark_execution_plan.md
benchmark/: analyze.py  cli.py  compare_results.py  dali_pipeline_worker.py  decode_runner.py  envs.py  jobs.py  matrix.py  orchestrator.py  pipeline_runner.py  policy.py  pyperf_micro_runner.py  reliability.py  results.py  runner.py  scenarios.py  slow_threshold.py  term.py  thread_policy.py  utils.py  video_runner.py
benchmark/adapters/: __init__.py  dali_video.py
benchmark/cloud/: gcp.py  instance.py
benchmark/decoders/: __init__.py  video.py
benchmark/media/: __init__.py  loaders.py
benchmark/specs/: __init__.py  load.py
benchmark/transforms/: albumentations_compat.py  albumentations_impl.py  albumentations_mit_compat.py  albumentations_mit_impl.py  albumentations_mit_multichannel_impl.py  albumentations_mit_video_impl.py  albumentations_video_impl.py  albumentationsx_impl.py  albumentationsx_multichannel_impl.py  albumentationsx_multichannel_pipeline_impl.py  albumentationsx_pipeline_impl.py  albumentationsx_video_impl.py  augly_impl.py  dithering_benchmark.py  image_recipe_specs.py  imgaug_impl.py  kornia_impl.py  kornia_multichannel_impl.py  kornia_multichannel_pipeline_impl.py  kornia_pipeline_impl.py  kornia_video_impl.py  pillow_impl.py  pillow_pipeline_impl.py  registry.py  specs.py  torchvision_impl.py  torchvision_multichannel_impl.py  torchvision_multichannel_pipeline_impl.py  torchvision_pipeline_impl.py  torchvision_video_impl.py  ultralytics_impl.py
docs/: benchmark_architecture.md  benchmark_scope.md
docs/images/: README.md  images_speedups.csv  images_summary.md  images_throughputs.csv  results.csv  results.md
docs/paper_transform_sets/: 9ch.md  rgb.md  video.md
docs/videos/: README.md  albumentations_video_metadata.yaml  albumentationsx_video_metadata.yaml  kornia_video_metadata.yaml  results.md  torchvision_video_metadata.yaml  videos_speedups.csv  videos_summary.md  videos_throughputs.csv
examples/: custom_image_transforms.py  custom_video_specs_template.py  kornia_video_transforms.py
output/: albumentations_mit_results.json  albumentations_results.json  albumentationsx_results.json  augly_results.json  comparison.csv  comparison.md  imgaug_results.json  kornia_results.json  torchvision_results.json  ultralytics_results.json
output/multichannel/: albumentations_mit_results.json  albumentationsx_results.json  kornia_results.json  torchvision_results.json
output_videos/: albumentations_mit_video_results.json  albumentations_video_results.json  albumentationsx_video_results.json  kornia_video_results.json  torchvision_video_results.json
output_videos/cpu/: albumentationsx_video_results.json  torchvision_video_results.json
papers/realistic-video-benchmarking/: plan.md
requirements/: albumentations.txt  albumentations_mit.txt  albumentationsx.in  albumentationsx.txt  augly.txt  imgaug.txt  kornia-video.txt  kornia.in  kornia.txt  pillow.txt  requirements-base-video-torch.txt  requirements.in  requirements.txt  torchvision-video.in  torchvision-video.txt  torchvision.txt  video-decoders.in
scripts/: run_dataloader_paper_sweeps.sh  run_gcp_rgb_micro_cpu_proxies.sh  run_multichannel_micro_paper_core.sh  run_rgb_micro_paper_core.sh
tests/: conftest.py  test_albumentationsx_api.py  test_architecture_docs.py  test_cli.py  test_compare.py  test_decode_runner.py  test_jobs_orchestrator.py  test_matrix.py  test_paper_coverage.py  test_pillow_impl.py  test_pipeline_runner.py  test_publish_results.py  test_pyperf_micro_runner.py  test_registry.py  test_reliability.py  test_runner_load.py  test_scenarios.py  test_slow_threshold.py  test_transform_spec.py  test_update_readme.py  test_utils.py
tools/: analyze_parametric_results.py  check_paper_coverage.py  compare.py  compare_results.py  compare_transform_results.py  compare_video_results.py  comparison_utils.py  generate_speedup_plots.py  generate_tables.py  publish_results.py  update_docs.sh  update_readme.py
(+9 files in other folders)
