[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "image-augmentation-benchmark"
version = "0.0.1"
description = "Benchmark for image augmentation libraries"
readme = "README.md"
keywords = [
  "benchmark",
  "computer vision",
  "deep learning",
  "fast augmentation",
  "image augmentation",
  "image classification",
  "image processing",
  "image transformation",
  "instance segmentation",
  "keras",
  "keypoint detection",
  "machine learning",
  "object detection",
  "pytorch",
  "semantic segmentation",
  "tensorflow",
]
license = { file = "LICENSE" }
maintainers = [ { name = "Vladimir Iglovikov" } ]
authors = [ { name = "Vladimir Iglovikov" } ]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
urls.Homepage = "https://albumentations.ai/docs/benchmarking_results/"

[tool.setuptools]
include-package-data = false
packages.find.include = [ "benchmark*", "tools*" ]
packages.find.exclude = [ "output*", "output_videos*", ".venv*", "tests*" ]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
target-version = "py313"
line-length = 120
indent-width = 4
# Assume Python 3.13
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".venv_*",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site",
  "site-packages",
  "venv",
]
format.indent-style = "space"
# Like Black, respect magic trailing commas.
format.quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN001",
  "ANN201",
  "ANN204",
  "ANN401",
  "ARG004",
  "BLE001",
  "C901",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D415",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "G004",
  "N802",
  "N812",
  "PLC0415", # Allow imports inside functions for optional dependencies
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "TRY003",
]
# Allow fix for all enabled rules (when `--fix`) is provided.
lint.explicit-preview-rules = true
lint.per-file-ignores."benchmark/cli.py" = [
  "S603",
  "S607",
  "T201"
]  # CLI: print output + subprocess with known commands
lint.per-file-ignores."benchmark/cloud/gcp.py" = [
  "S603",
  "S607"
]  # Cloud: subprocess calls to gcloud with known args
lint.per-file-ignores."tests/**/*.py" = [
  "S101",   # allow assert in tests
  "SLF001", # allow private member access in tests
]
lint.per-file-ignores."tools/*.py" = [ "T201" ]  # Allow print statements in CLI tools
lint.fixable = [ "ALL" ]
lint.unfixable = []
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Like Black, use double quotes for strings.
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = "-v --tb=short -p randomly --randomly-seed=last"
ini_options.timeout = 30

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pyright]
# Define an execution environment that points to the project's virtual env
# Assumes a standard .venv location relative to pyproject.toml
executionEnvironments = [
  { root = ".", pythonVersion = "3.13", venv = ".venv" },  # Adjusted to use venv field
]
# Include benchmark and tools directories for analysis
include = [ "benchmark", "tools" ]
# Exclude common directories and virtual envs
exclude = [ "**/node_modules", "**/__pycache__", ".git", ".venv" ]
# Disable the missing imports report
reportMissingImports = false
reportMissingModuleSource = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
